fixed overflow so it is a utility

--- a/curcial.css
+++ b/curcial.css
@@ -16,6 +16,7 @@ html {
   line-height: 1.5; /* 3 */
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 *,
@@ -28,17 +29,16 @@ html {
    ========================================================================== */
 
 /** 
- * 1.Sticky Footer requires html and body have 100% height, so the footer stays at the bottom even when there is little content 
- * 2. overflow-x is needed on both elements to hide offscreen items.
+ * Sticky Footer requires html and body have 100% height, so the footer stays at the bottom even when there is little content 
 */
 html,
 body {
   height: 100%;
-  overflow-x: hidden;
-  transform: translate3d(0, 0, 0);
 }
 
-body > footer {
+/* .page is for if the utility is used, the footer might be inside there */
+body > footer,
+.page-wrap > footer {
   position: sticky;
   top: 100vh;
 }
@@ -47,7 +47,6 @@ body > footer {
  * 1. Remove the body margin in all browsers. 
  * 2. Add fonts 
  * 3. Add font size
- * 4. Fixes strange behavior in iOS when we set body to overflow-x hidden
  */
 
 body {
